--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/browser": "^7.0.0",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "^7.1.0",
+    "@capacitor/geolocation": "^7.1.1",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "7.1.0",
     "@capacitor/keyboard": "7.0.0",
