updates for store

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -49,5 +49,14 @@
 	<string>We need access to your camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need access to your photo library.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+	<key>CFBundleURLSchemes</key>
+	<array>
+	<string>$URL_SCHEME</string>
+	</array>
+	</dict>
+	</array>
 </dict>
 </plist>
