--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@capacitor-firebase/storage": "^7.1.0",
     "@capacitor/android": "7.1.0",
     "@capacitor/app": "^7.0.0",
-    "@capacitor/browser": "^7.0.0",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "^7.1.0",
     "@capacitor/geolocation": "^7.1.1",
@@ -33,6 +33,7 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "@vueuse/motion": "^3.0.3",
+    "cordova-plugin-customurlscheme": "^5.0.2",
     "firebase": "^11.4.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
