--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_BASE_URL='http://localhost:8100'
-# VITE_API_URL='https://api.militarybandaid.com'
-VITE_API_URL='http://localhost:8080'
+VITE_API_URL='https://api.militarybandaid.com'
+# VITE_API_URL='http://localhost:8080'
 VITE_USSSA_URL='https://www.usssa.com/api'
