--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/ios": "7.1.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/local-notifications": "^7.0.0",
+    "@capacitor/preferences": "^7.0.1",
     "@capacitor/push-notifications": "^7.0.0",
     "@capacitor/splash-screen": "^7.0.0",
     "@capacitor/status-bar": "7.0.0",
