--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,6 +41,13 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
     implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.google.firebase:firebase-messaging:23.4.1'
+}
+
+apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+  implementation 'com.google.firebase:firebase-messaging:23.4.1'
 }
 
 apply from: 'capacitor.build.gradle'
