--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -11,6 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-community-fcm')
     implementation project(':capacitor-firebase-authentication')
+    implementation project(':capacitor-firebase-messaging')
     implementation project(':capacitor-firebase-storage')
     implementation project(':capacitor-app')
     implementation project(':capacitor-browser')
