--- a/appflow.config.json
+++ b/appflow.config.json
@@ -8,6 +8,9 @@
   "ios": {
     "path": "ios"
   },
+  "web": {
+    "path": "www"
+  },
   "plugins": [
     {
       "id": "cordova-plugin-customurlscheme",
@@ -16,15 +19,14 @@
       }
     }
   ],
-  "web": {
-    "path": "www"
-  },
   "build": {
     "cordova": {
-      "preferences": {}
+      "preferences": {},
+      "plugins": []
     },
     "capacitor": {
-      "platform": "ios"
+      "platform": "ios",
+      "plugins": []
     }
   }
 }
