--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "bandaid7",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "test:e2e": "cypress run",
     "test:unit": "vitest",
+    "test:e2e": "cypress run",
     "lint": "eslint .",
+    "dev": "vite",
     "ionic:build": "npm run build",
-    "ionic:serve": "npm run dev -- --open"
+    "ionic:serve": "npm run dev -- --open",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@capacitor-community/fcm": "^7.1.0",
@@ -41,6 +40,7 @@
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
     "pinia": "^3.0.1",
+    "register-service-worker": "^1.7.2",
     "swiper": "^11.2.5",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
@@ -50,6 +50,7 @@
     "@types/leaflet": "^1.9.16",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
     "cypress": "^13.5.0",
@@ -59,7 +60,9 @@
     "terser": "^5.4.0",
     "typescript": "~5.6.2",
     "vite": "~5.2.0",
+    "vite-plugin-pwa": "^1.0.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
-  }
+  },
+  "type": "module"
 }
