--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_BASE_URL='https://mobile.militarybandaid.com'
 VITE_API_URL='https://api.militarybandaid.com'
 # VITE_API_URL='http://localhost:8080'
 VITE_USSSA_URL='https://www.usssa.com/api'
+VITE_VAPID_KEY='BMGqzcwjWlzo6N0UmHjGX2ftT0KJCWM5x5DVLqnibT7-KdVJXb1lOEyKKv0kGanm2PcZ_1xr4DX2JXqDo0TJ0GM'
